// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZcashBalance renders component 1`] = `
<WithStyles(Grid)
  alignItems="stretch"
  container={true}
  direction="row"
  justify="flex-start"
  spacing={8}
>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(Grid)
      container={true}
      direction="column"
    >
      <WithStyles(Typography)
        className="title-mock"
        variant="body2"
      >
        Available
      </WithStyles(Typography)>
      <WithStyles(Grid)
        item={true}
      >
        <Memo(WithStyles(UsdBalance))
          value={"3243.25"}
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        className="zec-mock"
        item={true}
      >
        <Memo(WithStyles(ZecBalance))
          value={"12.323212"}
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <WithTheme(Grow)
    in={false}
  >
    <WithStyles(Grid)
      item={true}
    >
      <WithStyles(Grid)
        alignItems="flex-start"
        className="lockedRoot-mock"
        container={true}
        direction="column"
        justify="space-between"
      >
        <WithStyles(Grid)
          alignItems="center"
          container={true}
          item={true}
        >
          <WithStyles(Typography)
            className="lockedTitle-mock"
            inline={true}
            variant="caption"
          >
            Locked
          </WithStyles(Typography)>
          <Memo(WithStyles(Tooltip))
            placement="bottom"
            title="Because of the network's consensus requirements funds may be locked while your message is being broadcasted."
          >
            <pure(InfoOutlinedIcon)
              className="icon-mock"
            />
          </Memo(WithStyles(Tooltip))>
        </WithStyles(Grid)>
        <WithStyles(Typography)
          variant="caption"
        >
          + 
          0.00
        </WithStyles(Typography)>
        <WithStyles(Grid)
          className="zec-mock"
          item={true}
        >
          <WithStyles(Typography)
            variant="caption"
          >
            + 
            0.000000
          </WithStyles(Typography)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithTheme(Grow)>
</WithStyles(Grid)>
`;

exports[`ZcashBalance renders when balanced locked 1`] = `
<WithStyles(Grid)
  alignItems="stretch"
  container={true}
  direction="row"
  justify="flex-start"
  spacing={8}
>
  <WithStyles(Grid)
    item={true}
  >
    <WithStyles(Grid)
      container={true}
      direction="column"
    >
      <WithStyles(Typography)
        className="title-mock"
        variant="body2"
      >
        Available
      </WithStyles(Typography)>
      <WithStyles(Grid)
        item={true}
      >
        <Memo(WithStyles(UsdBalance))
          value={"0"}
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        className="zec-mock"
        item={true}
      >
        <Memo(WithStyles(ZecBalance))
          value={"0"}
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
  <WithTheme(Grow)
    in={true}
  >
    <WithStyles(Grid)
      item={true}
    >
      <WithStyles(Grid)
        alignItems="flex-start"
        className="lockedRoot-mock"
        container={true}
        direction="column"
        justify="space-between"
      >
        <WithStyles(Grid)
          alignItems="center"
          container={true}
          item={true}
        >
          <WithStyles(Typography)
            className="lockedTitle-mock"
            inline={true}
            variant="caption"
          >
            Locked
          </WithStyles(Typography)>
          <Memo(WithStyles(Tooltip))
            placement="bottom"
            title="Because of the network's consensus requirements funds may be locked while your message is being broadcasted."
          >
            <pure(InfoOutlinedIcon)
              className="icon-mock"
            />
          </Memo(WithStyles(Tooltip))>
        </WithStyles(Grid)>
        <WithStyles(Typography)
          variant="caption"
        >
          + 
          3,243.25
        </WithStyles(Typography)>
        <WithStyles(Grid)
          className="zec-mock"
          item={true}
        >
          <WithStyles(Typography)
            variant="caption"
          >
            + 
            12.323212
          </WithStyles(Typography)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithTheme(Grow)>
</WithStyles(Grid)>
`;
